--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.0.1",
   "description": "my first socket.io app",
   "dependencies": {
+    "cookie-parser": "^1.4.2",
+    "cookie-session": "^2.0.0-alpha.1",
     "express": "^4.10.2",
     "session.socket.io": "^0.2.1",
     "socket.io": "^1.4.6"
